# lunabot

./: .gitignore  CMakeLists.txt  README.md  lunabotConfig.cmake.in  lunabotConfigVersion.cmake.in  package.xml  setup.cfg  setup.py
install/: local_setup.sh  setup.sh
install/lunabot/include/lunabot/lunabot/msg/: inference_result.h  inference_result.hpp  rosidl_generator_c__visibility_control.h  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h  yolo_v8_inference.h  yolo_v8_inference.hpp
install/lunabot/include/lunabot/lunabot/msg/detail/: inference_result__builder.hpp  inference_result__functions.c  inference_result__functions.h  inference_result__rosidl_typesupport_fastrtps_c.h  inference_result__rosidl_typesupport_fastrtps_cpp.hpp  inference_result__rosidl_typesupport_introspection_c.h  inference_result__rosidl_typesupport_introspection_cpp.hpp  inference_result__struct.h  inference_result__struct.hpp  inference_result__traits.hpp  inference_result__type_support.c  inference_result__type_support.cpp  inference_result__type_support.h  yolo_v8_inference__builder.hpp  yolo_v8_inference__functions.c  yolo_v8_inference__functions.h  yolo_v8_inference__rosidl_typesupport_fastrtps_c.h  yolo_v8_inference__rosidl_typesupport_fastrtps_cpp.hpp  yolo_v8_inference__rosidl_typesupport_introspection_c.h  yolo_v8_inference__rosidl_typesupport_introspection_cpp.hpp  yolo_v8_inference__struct.h  yolo_v8_inference__struct.hpp  yolo_v8_inference__traits.hpp  yolo_v8_inference__type_support.c  yolo_v8_inference__type_support.cpp  yolo_v8_inference__type_support.h
install/lunabot/share/ament_index/resource_index/package_run_dependencies/: lunabot
install/lunabot/share/ament_index/resource_index/parent_prefix_path/: lunabot
install/lunabot/share/ament_index/resource_index/rosidl_interfaces/: lunabot
install/lunabot/share/lunabot/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/lunabot/share/lunabot/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_lunabot__rosidl_generator_cExport-noconfig.cmake  export_lunabot__rosidl_generator_cExport.cmake  export_lunabot__rosidl_generator_cppExport.cmake  export_lunabot__rosidl_generator_pyExport-noconfig.cmake  export_lunabot__rosidl_generator_pyExport.cmake  export_lunabot__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_lunabot__rosidl_typesupport_fastrtps_cExport.cmake  export_lunabot__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_lunabot__rosidl_typesupport_fastrtps_cppExport.cmake  lunabotConfig.cmake  lunabot__rosidl_typesupport_cExport-noconfig.cmake  lunabot__rosidl_typesupport_cExport.cmake  lunabot__rosidl_typesupport_cppExport-noconfig.cmake  lunabot__rosidl_typesupport_cppExport.cmake  lunabot__rosidl_typesupport_introspection_cExport-noconfig.cmake  lunabot__rosidl_typesupport_introspection_cExport.cmake  lunabot__rosidl_typesupport_introspection_cppExport-noconfig.cmake  lunabot__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/lunabot/share/lunabot/msg/: InferenceResult.idl  YoloV8Inference.idl
log/: latest_build
lunabot/: left_encoder_node.py  motor_node.py
src/: MPU6050Driver.ino  MotorLeftEncoder.ino
src/custom_interfaces/: CMakeLists.txt  package.xml
src/custom_interfaces/msg/: InferenceResult.msg
src/lunabot/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/lunabot/launch/: inference_node.launch.py  minimal_twist.launch.py  video_publisher.launch.py
src/lunabot/lunabot/: inference_node.py
src/lunabot/msg/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/lunabot/msg/log/: latest_build
src/lunabot/src/: MinimalTwistControl.cpp  VideoPublisher.cpp  raw_image_publisher.cpp
