<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lunabot</name>
  <version>0.0.0</version>
  <description>Package for controlling the lunabot</description>
  <maintainer email="jhensenrayagni@gmail.com">jragni</maintainer>
  <license>APACHE 2.0</license>

  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>rclpy</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>python-opencv</depend>
  <depend>Rpi.GPIO</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
