<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lunabot</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="jhensenrayagni@gmail.com">ragglesoft</maintainer>
  <license>Apache-2.0</license>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>turtlebot3_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>OpenCV</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
